# MeshToASCII

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buffers.h  linear.h  main.cpp  parser.h
src/: main.cpp
src/implementation/: buffers.cpp  linear.cpp  parser.cpp
src/include/: buffers.h  linear.h  parser.h
